RunAllProofs:  - Added ant task.  - Assigned names to test cases.